# blazed-demo

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
client/: Cargo.toml
client/.cargo/: config.toml
client/shaders/: shader.frag  shader.vert
client/shaders/normal/: shader.frag  shader.vert
client/shaders/simple/: shader.frag  shader.vert
client/src/: main.rs
client/src/base/: cfg.rs  err.rs  fps.rs  keys.rs  mod.rs  obj.rs  render.rs  util.rs
client/src/base/net/: mod.rs  tcp.rs  udp.rs  util.rs
server/: Cargo.toml
server/.cargo/: config.toml
server/src/: main.rs
server/src/base/: cfg.rs  err.rs  mod.rs
server/src/base/net/: tcp.rs  udp.rs
src/: lib.rs
src/base/: atom.rs  cam.rs  err.rs  flags.rs  keys.rs  mod.rs  obj.rs  threading.rs  util.rs
src/base/net/: conn.rs  mod.rs  obj.rs  packet.rs  tcp.rs  udp.rs  util.rs
