[package]
name = "blazed-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bitflags = { version = "2.8.0", features = ["serde"] }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-utils = "0.8.21"
ctrlc = { workspace = true }
enum-unit = "0.1.4"
env_logger = "0.11.6"
log = "0.4.25"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
packet_enum = "0.1.6"
parking_lot = "0.12.3"
serde = { version = "1.0.217", features = ["derive"] }
spin_sleep = "1.3.0"
strum = { version = "0.26.3", features = ["derive"] }
sync_select = { workspace = true }
thiserror = { workspace = true }

[profile.release]
lto = true
codegen-units = 1

[workspace]
resolver = "2"
members = ["client", "server"]

[workspace.dependencies]
ctrlc = "3.4.5"
thiserror = "2.0.11"
clap = { version = "4.5.26", features = ["derive"] }
crossbeam-channel = "0.5.14"
sync_select = "0.1.0"
