[package]
name = "blazed-demo"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["client", "server"]

[workspace.dependencies]
atomflag = "0.1.1"
atomint = "0.1.0"
bitcode = "0.6.6"
bitflags = { version = "2.9.1", features = ["bytemuck"] }
bytemuck = "1.23.1"
clap = "4.5.40"
crossbeam-channel = "0.5.15"
ctrlc = "3.4.7"
enum-unit = "0.2.3"
env_logger = "0.11.8"
log = "0.4.27"
sync_select = "0.2.0"
thiserror = "2.0.12"
ultraviolet = { version = "0.10.0", features = ["bytemuck"] }
wopt = { version = "0.3.9", features = ["bytemuck"] }

[dependencies]
atomflag = { workspace = true }
atomint = { workspace = true }
bitcode = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive"] }
crossbeam-channel = { workspace = true }
crossbeam-utils = "0.8.21"
ctrlc = { workspace = true }
enum-unit = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
parking_lot = "0.12.4"
spin_sleep = "1.3.2"
strum = { version = "0.26.3", features = ["derive"] }
sync_select = { workspace = true }
thiserror = { workspace = true }
ultraviolet = { workspace = true }
wopt = { workspace = true }

[profile.release]
lto = true
codegen-units = 1
