[package]
name = "blazed-demo"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["client", "server"]

[workspace.dependencies]
atomflag = "0.1.2"
atomint = "0.1.1"
bitcode = "0.6.7"
bitflags = { version = "2.9.4", features = ["bytemuck"] }
bytemuck = "1.23.2"
clap = "4.5.48"
crossbeam-channel = "0.5.15"
ctrlc = "3.5.0"
enum-unit = "0.2.5"
env_logger = "0.11.8"
log = "0.4.28"
rand = "0.9.2"
sync_select = "0.2.3"
thiserror = "2.0.16"
ultraviolet = { version = "0.10.0", features = ["bytemuck"] }
wopt = { version = "0.4.2", features = ["bytemuck"] }

[dependencies]
atomflag = { workspace = true }
atomint = { workspace = true }
bitcode = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive"] }
crossbeam-channel = { workspace = true }
crossbeam-utils = "0.8.21"
ctrlc = { workspace = true }
enum-unit = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
parking_lot = "0.12.4"
rand = { workspace = true }
spin_sleep = "1.3.3"
strum = { version = "0.27.2", features = ["derive"] }
sync_select = { workspace = true }
thiserror = { workspace = true }
ultraviolet = { workspace = true }
wopt = { workspace = true }

[profile.release]
lto = true
codegen-units = 1
