[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
blazed-demo = { path = ".." }
bytemuck = "1.19.0"
egui_glow = "0.29.1"
glow = "0.15.0"
obj-rs = { version = "0.7.4", features = ["vulkano"] }
sdl2 = { version = "0.37.0", features = ["bundled", "static-link"] }
thiserror = "2.0.3"
