[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
blazed-demo = { path = ".." }
bytemuck = { version = "1.21.0", features = ["derive"] }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true }
enum-unit = "0.1.4"
glow = "0.16.0"
pfrs = "0.1.2"
sdl2 = { version = "0.37.0", features = ["bundled", "static-link"] }
sync_select = { workspace = true }
thiserror = { workspace = true }
